WebContent/VAADIN/themes/reindeer/panel/panel.css
.blue .v-panel-caption,
.blue .v-panel-nocaption,
.blue .v-panel-content {
	border-color: #a8bcc5;
}
.v-panel-caption,
.v-panel-nocaption,
.white .v-panel-caption,
.white .v-panel-nocaption {
	border-bottom: 1px solid #e5e5e5;
	line-height: 16px; /* accommodate minimum icon size */
}
.v-webkit .v-panel-caption,
.v-webkit .v-panel-nocaption,
.v-gecko .v-panel-caption,
.v-gecko .v-panel-nocaption,
.v-ie9 .v-panel-caption,
.v-ie9 .v-panel-nocaption {
	border-bottom-color: rgba(0,0,0,.08);
}
.v-panel-caption {
	padding-bottom: 2px;
}
.v-panel-content,
.white .v-panel-content {
	border: 1px solid #dcdcdc;
	border-bottom: none;
	border-top: none;
}
.v-webkit .v-panel-content,
.v-gecko .v-panel-content,
.v-ie9 .v-panel-content {
	border-top-color: rgba(0,0,0,.07);
}
.v-panel-content > div {
	background: #fff;
	min-height: 100%;
	overflow: visible; /* min-height causes problems with borders and paddings if overflow is e.g. hidden */
}
.blue .v-panel-deco {
	border-color: #92a3ac;
	background: #adc2cd;
}
.v-panel-deco,
.white .v-panel-deco {
	height: 1px;
	border-top: 1px solid #bebebe;
	background: #e2e2e2;
	overflow: hidden;
}
.v-wekit .v-panel-deco,
.v-gecko .v-panel-deco,
.v-ie9 .v-panel-deco {
	border-top-color: rgba(0,0,0,.1);
	background: rgba(0,0,0,.08);
}
.v-panel-caption .v-errorindicator {
	height: 16px;
	width: 13px;
	background: url(../common/icons/error.png) no-repeat 50%;
	display: inline;
	display: inline-block;
	vertical-align: middle;
}

/* Light style */
.v-panel-light .v-panel-caption-light,
.v-panel-light .v-panel-nocaption-light {
	border: none;
}
.v-panel-light .v-panel-content-light {
	border: none;
}
.v-panel-content-light > div {
	background: transparent;
}
.v-panel-light .v-panel-deco-light {
	height: 0;
	border: none;
}

